<resources>
    <string name="app_name">NFood</string>
    <string name="server_client_id">594756187768-slmh5l8p1j5c2pj1tv7hrkg0avctkrui.apps.googleusercontent.com</string>
    <string name="map_box">pk.eyJ1IjoibmdxdW9jaHV5ZGwyMyIsImEiOiJjazlxdXE1eXYwbnRqM2VydGZpendjYmF4In0.qjMJLsMzKkauG8ccu29IiA</string>
    <string name="facebook_app_id">248215453167227</string>
    <string name="fb_login_protocol_scheme">fb248215453167227</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="category">Category</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone Number</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="total">Total</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="title_activity_setting">Settings</string>
    <string name="register">Register</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="my_order">My Order</string>
    <string name="name">Full Name</string>
    <string name="password">Password</string>
    <string name="full_name">Name</string>
    <string name="email">Email</string>
    <string name="edit_account">Edit Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="save_change">Save Change</string>
    <string name="create">Create</string>
    <string name="check_out">Check Out</string>
    <string name="order">Order</string>
    <string name="ship_fee">Ship Fee</string>
    <string name="subtotal">Subtotal</string>
    <string name="order_total">Order Total</string>
    <string name="add_new_address">Add new address</string>
    <string name="edit_my_address">Edit my address</string>
    <string name="my_address">My Address</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="ward">Ward</string>
    <string name="details_address">Details Address</string>
    <string name="sub_details_address">Unit number, house number, building, street name</string>
    <string name="set_default_address">Set As Default Address</string>
    <string name="select_address">Select Address</string>
    <string name="my_voucher">My Voucher</string>
    <string name="order_detail">Order Detail</string>
    <string name="about_nfood">About NFood</string>
    <string name="user_policy">User Policy</string>
    <string name="payment">Payment</string>
    <string name="setting">Setting</string>
    <string name="for_seller">For Seller</string>
    <string name="address">Address</string>
    <string name="nfood_coin">NFood Coins</string>
    <string name="detail_voucher">Detail Voucher</string>
    <string name="select_voucher">Select Voucher</string>
    <string name="select_payment">Select Payment</string>
    <string name="find_driver">Find Driver</string>
    <string name="cancel">Cancel</string>
    <string name="re_order">Re-Order</string>
    <string name="rate">Rate</string>
    <string name="order_status">Order Status</string>
    <string name="search_history">Search History</string>
    <string name="delete">Delete</string>
    <string name="found_driver">Yaz, we found you a driver !</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update_password">Update Password</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="chat">Chat</string>
    <string name="channel_id">NFood</string>
    <string name="for_driver">For Driver</string>
    <string name="favourite">Favourite</string>

</resources>
