<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nfood.nfood.Profile.Setting.UpdatePassword">
    <include
        android:id="@+id/header"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <androidx.core.widget.NestedScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/password"
                    android:textColor="@color/titleTextColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/enterCurrentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="textPassword"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/titleTextColor"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/view_shadow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/new_password"
                    android:textColor="@color/titleTextColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/enterNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/titleTextColor"
                    android:textSize="15sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/view_shadow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/confirm_new_password"
                    android:textColor="@color/titleTextColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/enterConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:inputType="textPassword"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/titleTextColor"
                    android:textSize="15sp" />
            </LinearLayout>
            <Button
                android:id="@+id/saveChangeClick"
                android:text="@string/save_change"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_circle_rectangle" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
